# telecom-p5

./: README.md  pyproject.toml  run-grader
.github/workflows/: classroom.yml  main.yml
ieee80211ag/: __main__.py  bcc.py  channel.py  common.py  rx.py  tx.py
tests/: test_deinterleaver.py  test_demapper.py  test_descramble.py  test_freq_offset.py  test_integration.py  test_long_symbol_corr.py  test_ofdm_receiver.py  test_packet_detector.py  test_viterbi.py
tests/data/: frames.npz  signal.npz
workbench/: hostapd.conf  wifi_rx.grc
