[tool.poetry]
package-mode = false

[project]
name = "ieee80211ag"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<2.5.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "numba (>=0.65.1,<0.66.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
